<resources>
    <string name="app_name">DontEatAlone</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_profile">Profile</string>
    <string name="action_end">End</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="input_name">What\'s your name\?</string>

    <!-- Login activity string -->
    <string name="title_activity_login">Don\'t Eat Alone\!</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="button_signup">Sign up</string>
    <string name="button_login">Log in</string>

    <!-- Sign up activity string -->
    <string name="title_activity_signup">Sign Up</string>
    <string name="signup_firstname">First name(Required)</string>
    <string name="signup_lastname">Last name</string>
    <string name="signup_age">Age</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_male">Male</string>
    <string name="signup_female">Female</string>
    <string name="signup_user_description">Description about yourself</string>
    <string name="signup_email">Email address(Required)</string>
    <string name="signup_password">Password(Required)</string>
    <string name="signup_confirm_password">Confirm password(Required)</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <!-- Preference activity string -->
    <string name="pref_about_person">Search For:</string>
    <string name="pref_about_meetup">Preferred Meeting Details:</string>
    <string name="pref_age">Age</string>
    <string name="pref_gender">Gender</string>
    <string name="pref_male">Male</string>
    <string name="pref_female">Female</string>
    <string name="pref_sex_none">No preference</string>
    <string name="pref_min">Min Age</string>
    <string name="pref_max">Max Age</string>
    <string name="pref_food">Preferred food</string>
    <string name="pref_time_range">Preferred time range</string>
    <string name="pref_to">to</string>
    <string name="pref_distance">Max Distance Away (Km)</string>
    <string name="pref_start">Start</string>
    <string name="pref_end">End</string>
    <string name="pref_price">Price</string>
    <string name="pref_comment">Comment</string>
    <string name="button_start_search">Start Searching</string>
    <string name="pref_start_search">Start Searching</string>
    <string name="pref_delete_pref">Delete Preference</string>

    <string-array name="pref_age_array">
        <item>18-22</item>
        <item>22-25</item>
    </string-array>

    <string-array name="pref_food_array">
        <item>...food1</item>
        <item>...food2</item>
    </string-array>

    <!-- Matches expandable list -->

    <!-- The first param is the display name, the second param is the age -->
    <string name="matches_user_basic_info">%1$s</string>
    <string name="matches_distance">%1$s Km away</string>
    <string name="matches_time">Time available: %1$s to %2$s</string>
    <string name="matches_price">Price range: $%1$s to $%2$s</string>
    <string name="matches_comment">%1$s</string>
    <string name="matches_invite">Invite</string>
    <string name="request_accept">Accept</string>

    <!-- Profile activity string -->
    <string name="profile_name">Name: </string>
    <string name="profile_gender">Gender: </string>
    <string name="profile_age">Age: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_description">Description: </string>
    <string name="profile_button_edit">Update My Profile</string>
    <string name="profile_button_save">Save My Profile</string>
    <string name="profile_logoutDialog_title">Log Out</string>
    <string name="profile_logoutDialog_message">Are you sure you want to log out?</string>
    <string name="profile_logoutDialog_yes">Yes</string>
    <string name="profile_logoutDialog_no">No</string>

    <!-- Start Matching activity string -->
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_start_matching">StartMatchingActivity</string>
    <string name="button_set_preference">Preference</string>
    <string name="button_find_match">Finding a match</string>
    <string name="start_matching_description">If you want to start finding a person nearby to have meal with,
    please click the button at the bottom to start your matching process.</string>


    <!-- Messenger activity -->
    <string name="title_activity_messenger">Messenger</string>
    <string name="messenger_place">Pick a place</string>
    <string name="messenger_endDialog_msg">Please rate your company to end this meeting.</string>
    <string name="messenger_endDialog_title">Rating</string>
    <string name="messenger_endDialog_like">Like</string>
    <string name="messenger_endDialog_dislike">Dislike</string>

    <!-- Waiting activity string -->
    <string name="waiting1">There are no match ups at the moment. </string>
    <string name="waiting2">We will keep you in out database so that you cen be found by other users.</string>
    <string name="waiting3">If you would like to cancel the match up, please click "Cancel searching"</string>
    <string name="button_cancelSearching">Cancel Searching</string>
    <string name="button_create_preference">Set New Preference</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_waiting">WaitingActivity</string>

    <!-- Facebook -->
    <string name="facebook_app_id">107383156263699</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_match_list">MatchListActivity</string>
    <string name="title_activity_matches">Matches</string>
    <string name="title_activity_restaurant_list">RestaurantListActivity</string>


    <!-- Restaurant List -->
    <string name="rest_send_button">Send</string>
    <string name="rest_custom_loc">Set Location</string>
    <string name="rest_get_direction">Get Direction</string>
    <string name="rest_address">Address: %1$s</string>
    <string name="rest_phone">Phone: %1$s</string>


    <string name="google_api_key">AIzaSyB0CJSASK7BddKekAbYTYKfmC6LDcmssIE</string>
    <string name="meeting_edit_message">Write a message</string>
    <string name="meeting_messenger_place_button">Pick a place</string>
    <string name="min_price_pref">Min Price</string>
    <string name="max_price_pref">Max Price</string>
    <string name="thumbs_up_group">thumps_up_group</string>

</resources>
