<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gavinluo.donteatalone.NoMatchFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting1"
            android:textSize="@dimen/heading_font_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_layout_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting2"
            android:textSize="@dimen/heading_font_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_layout_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting3"
            android:textSize="@dimen/heading_font_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_layout_margin"/>
        
        <Button
            android:id="@+id/button_createPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/button_create_preference"
            />

    </LinearLayout>

</FrameLayout>
