<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:anrdoid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff21201d">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff21201d">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff21201d"
            android:id="@+id/match_linear_layout">>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_about_person"
                android:textSize="@dimen/heading_font_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/activity_layout_margin"
                android:textColor="#ffe4d19f"
                android:id="@+id/text_about_person"
                android:layout_alignParentTop="true"
                android:textColorHint="#ffe4d19f" />

            <RadioGroup
                android:id="@+id/pref_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_layout_margin"
                android:layout_below="@+id/text_about_person"
                android:layout_alignParentLeft="true">

                <RadioButton
                    android:id="@+id/pref_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_male"
                    android:textColor="#ffe4d19f"
                    android:textSize="@dimen/general_text_font_size"
                    android:textColorHint="#ffe4d19f" />

                <RadioButton
                    android:id="@+id/pref_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_female"
                    android:textColor="#ffe4d19f"
                    android:textSize="@dimen/general_text_font_size"
                    android:textColorHint="#ffe4d19f" />

                <RadioButton
                    android:id="@+id/pref_sex_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_sex_none"
                    android:checked="true"
                    android:textColor="#ffe4d19f"
                    android:textSize="@dimen/general_text_font_size"
                    android:textColorHint="#ffe4d19f" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_layout_margin"
                android:id="@+id/age_layout"
                android:layout_below="@+id/pref_gender"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/pref_min_age"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:hint="@string/pref_min"
                    android:inputType="number"
                    android:textColor="#ffe4d19f"
                    android:textColorHint="#ffe4d19f"
                    android:textSize="@dimen/general_text_font_size"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="false"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="32dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/pref_to"
                    android:id="@+id/min_to_max"
                    android:textColor="#ffe4d19f"
                    android:layout_toRightOf="@+id/pref_min_age"
                    android:layout_toLeftOf="@+id/pref_max_age"
                    android:layout_centerInParent="true"
                    android:textColorHint="#ffe4d19f" />

                <EditText
                    android:id="@+id/pref_max_age"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:hint="@string/pref_max"
                    android:inputType="number"
                    android:textColor="#ffe4d19f"
                    android:textColorHint="#ffe4d19f"
                    android:textSize="@dimen/general_text_font_size"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center" />

            </RelativeLayout>

            <EditText
                android:id="@+id/pref_distance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/pref_distance"
                android:inputType="number"
                android:layout_margin="@dimen/activity_layout_margin"
                android:textColorHint="#ffe4d19f"
                android:textColor="#ffe4d19f"
                android:textSize="@dimen/general_text_font_size"
                android:layout_below="@+id/age_layout"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_about_meetup"
                android:textSize="@dimen/heading_font_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/activity_layout_margin"
                android:id="@+id/about_meetup"
                android:textColor="#ffe4d19f"
                android:layout_below="@+id/pref_distance"
                android:textColorHint="#ffe4d19f" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_layout_margin"
                android:id="@+id/time_layout"
                android:layout_below="@+id/about_meetup">

                <Button
                    android:id="@+id/pref_start_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_start"
                    android:onClick="getStartTime"
                    android:background="#ff6f956d"
                    android:textColor="#ffe4d19f"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pref_to"
                    android:id="@+id/start_to_end"
                    android:textColor="#ffe4d19f"
                    android:layout_toRightOf="@+id/pref_start_time"
                    android:layout_toLeftOf="@+id/pref_end_time"
                    android:layout_centerInParent="true" />

                <Button
                    android:id="@+id/pref_end_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_end"
                    android:onClick="getEndTime"
                    android:background="#ff6f956d"
                    android:textColor="#ffe4d19f"
                    android:layout_alignParentEnd="true" />

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_layout_margin"
                android:id="@+id/price_layout"
                android:layout_below="@+id/time_layout">

                <EditText
                    android:id="@+id/pref_min_price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Min Price"
                    android:inputType="number"
                    android:textColor="#ffe4d19f"
                    android:textColorHint="#ffe4d19f"
                    android:layout_alignParentStart="true"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pref_to"
                    android:layout_toRightOf="@+id/pref_min_price"
                    android:layout_toLeftOf="@+id/pref_max_price"
                    android:layout_centerInParent="true"
                    android:textColor="#ffe4d19f" />

                <EditText
                    android:id="@+id/pref_max_price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_price_pref"
                    android:inputType="number"
                    android:textColorHint="#ffe4d19f"
                    android:textColor="#ffe4d19f"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center" />

            </RelativeLayout>

            <EditText
                android:id="@+id/pref_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pref_comment"
                android:layout_margin="@dimen/activity_layout_margin"
                android:layout_below="@+id/price_layout"
                android:textColorHint="#ffe4d19f"
                android:textColor="#ffe4d19f"
                android:textAlignment="center" />

            <Button
                android:id="@+id/pref_search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start_search"
                android:layout_margin="@dimen/activity_layout_margin"
                android:onClick="startSearching"
                android:background="#ff6f956d"
                android:textColor="#ffe4d19f"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/pref_comment"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </ScrollView>
</LinearLayout>

